[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pqlkit"
version = "0.1.0"
description = "Format and explain Adobe Experience Platform PQL (Profile Query Language)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["adobe", "experience-platform", "aep", "pql", "rtcdp", "segmentation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
pqlkit = "pqlkit.cli:main"

[tool.setuptools.packages.find]
include = ["pqlkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
